@@ -38,8 +38,7 @@ import com.oracle.svm.core.feature.InternalFeature;
 import com.oracle.svm.core.jdk.RuntimeSupport;
 import com.oracle.svm.core.log.Log;
 
-import sun.misc.Signal;
-import sun.misc.SignalHandler;
+import jdk.internal.misc.Signal;
 
 @AutomaticallyRegisteredFeature
 public class DumpHeapOnSignalFeature implements InternalFeature {
@@ -64,7 +63,7 @@ final class DumpHeapStartupHook implements RuntimeSupport.Hook {
     }
 }
 
-class DumpHeapReport implements SignalHandler {
+class DumpHeapReport implements Signal.Handler {
     private static final TimeZone UTC_TIMEZONE = TimeZone.getTimeZone("UTC");
 
     static void install() {
